ingress/ingress-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
#  Ingress Controller label selector
  name: nginx-ingress
spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      protocol: TCP
      name: http
    - targetPort: 443
      port: 443
      protocol: TCP
      name: https
  selectors:
    name: nginx-ingress
